--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,11 @@ version = "0.1.0"
 authors = ["Billy Rieger <wrieger@protonmail.com>"]
 edition = "2018"
 
+[features]
+default = ["import-rle"]
+import-rle = ["nom"]
+
 [dependencies]
 hashbrown = "0.1"
 itertools = "0.8"
+nom = { version = "4.1", optional = true }
