--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,10 +5,15 @@ authors = ["Billy Rieger <wrieger@protonmail.com>"]
 edition = "2018"
 
 [features]
-default = ["import-rle"]
+default = ["export-png", "import-rle"]
+
+export-png = ["png"]
+export-svg = ["svg"]
 import-rle = ["nom"]
 
 [dependencies]
 hashbrown = "0.1"
 itertools = "0.8"
 nom = { version = "4.1", optional = true }
+png = { version = "0.14", optional = true }
+svg = { version = "0.5.12", optional = true }
