--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,19 +1,5 @@
-[package]
-name = "smeagol"
-version = "0.1.0"
-authors = ["Billy Rieger <wrieger@protonmail.com>"]
-edition = "2018"
-
-[features]
-default = ["export-png", "import-rle"]
-
-export-png = ["png"]
-export-svg = ["svg"]
-import-rle = ["nom"]
-
-[dependencies]
-hashbrown = "0.1"
-itertools = "0.8"
-nom = { version = "4.1", optional = true }
-png = { version = "0.14", optional = true }
-svg = { version = "0.5.12", optional = true }
+[workspace]
+members = [
+    "smeagol",
+    "smeagol-cli",
+]
