--- a/smeagol-cli/Cargo.toml
+++ b/smeagol-cli/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Billy Rieger <wrieger@protonmail.com>"]
 edition = "2018"
 
 [dependencies]
+clap = "2.32"
 smeagol = { path = "../smeagol" }
 
 [[bin]]
