--- a/smeagol/Cargo.toml
+++ b/smeagol/Cargo.toml
@@ -17,3 +17,10 @@ itertools = "0.8"
 nom = { version = "4.1", optional = true }
 png = { version = "0.14", optional = true }
 svg = { version = "0.5.12", optional = true }
+
+[dev-dependencies]
+criterion = "0.2"
+
+[[bench]]
+name = "bench"
+harness = false
