Improve RLE parsing code

--- a/smeagol/Cargo.toml
+++ b/smeagol/Cargo.toml
@@ -12,6 +12,7 @@ export-svg = ["svg"]
 import-rle = ["nom"]
 
 [dependencies]
+btoi = "0.4"
 hashbrown = "0.1"
 nom = { version = "4.1", optional = true }
 png = { version = "0.14", optional = true }
