--- a/smeagol/Cargo.toml
+++ b/smeagol/Cargo.toml
@@ -9,12 +9,13 @@ default = ["export-png", "import-rle"]
 
 export-png = ["png"]
 export-svg = ["svg"]
-import-rle = ["nom"]
+import-rle = ["btoi", "nom"]
 
 [dependencies]
-btoi = "0.4"
 hashbrown = "0.1"
-nom = { version = "4.1", optional = true }
+rand = "0.6"
+btoi = { version = "0.4", optional = true }
+nom = { version = "4.2", optional = true }
 png = { version = "0.14", optional = true }
 svg = { version = "0.5.12", optional = true }
 
