--- a/smeagol/Cargo.toml
+++ b/smeagol/Cargo.toml
@@ -19,6 +19,7 @@ svg = { version = "0.5.12", optional = true }
 
 [dev-dependencies]
 criterion = "0.2"
+tempfile = "3.0"
 
 [[bench]]
 name = "bench"
