--- a/smeagol/Cargo.toml
+++ b/smeagol/Cargo.toml
@@ -15,6 +15,7 @@ import-rle = ["smeagol-rle"]
 hashbrown = "0.1"
 itertools = "0.8"
 rand = "0.6"
+smeagol-mc = { path = "../smeagol-mc" }
 smeagol-rle = { path = "../smeagol-rle", optional = true }
 png = { version = "0.14", optional = true }
 svg = { version = "0.5.12", optional = true }
