--- a/smeagol/Cargo.toml
+++ b/smeagol/Cargo.toml
@@ -4,26 +4,6 @@ version = "0.1.0"
 authors = ["Billy Rieger <wrieger@protonmail.com>"]
 edition = "2018"
 
-[features]
-default = ["export-png", "import-rle"]
-
-export-png = ["png"]
-export-svg = ["svg"]
-import-rle = ["smeagol-rle"]
-
 [dependencies]
 hashbrown = "0.1"
-itertools = "0.8"
-rand = "0.6"
-smeagol-mc = { path = "../smeagol-mc" }
-smeagol-rle = { path = "../smeagol-rle", optional = true }
-png = { version = "0.14", optional = true }
-svg = { version = "0.5.12", optional = true }
-
-[dev-dependencies]
-criterion = "0.2"
-tempfile = "3.0"
-
-[[bench]]
-name = "bench"
-harness = false
+packed_simd = "0.3"
