--- a/smeagol/Cargo.toml
+++ b/smeagol/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 [dependencies]
 hashbrown = "0.1"
 packed_simd = "0.3"
+png = "0.14"
 smeagol-mc = { path = "../smeagol-mc" }
 smeagol-rle = { path = "../smeagol-rle" }
 
