--- a/smeagol/Cargo.toml
+++ b/smeagol/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Billy Rieger <wrieger@protonmail.com>"]
 edition = "2018"
 
 [dependencies]
+failure = "0.1"
 hashbrown = "0.1"
 packed_simd = "0.3"
 png = "0.14"
