--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,8 @@ license = "MPL-2.0"
 edition = "2018"
 
 [badges]
-codecov = { repository = "https://github.com/billyrieger/smeagol" }
-travis-ci = { repository = "https://github.com/billyrieger/smeagol" }
+codecov = { repository = "billyrieger/smeagol" }
+travis-ci = { repository = "billyrieger/smeagol" }
 
 [dependencies]
 btoi = "0.4"
