--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "smeagol"
 version = "0.1.2"
 authors = ["Billy Rieger <wrieger@protonmail.com>"]
-description = "A library to efficiently simulate Conway's Game of Life using the HashLife algorithm and SIMD."
+description = "Conway's Game of Life using HashLife and SIMD."
 repository = "https://github.com/billyrieger/smeagol"
 readme = "README.md"
 keywords = ["life", "conway", "cellular", "automaton", "hashlife"]
