--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
 name = "smeagol"
-version = "0.1.0"
+version = "0.5.0"
 authors = ["Billy Rieger <wrieger@protonmail.com>"]
 edition = "2018"
+publish = false
 
 [dependencies]
