--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,10 @@ edition = "2018"
 publish = false
 
 [dependencies]
+
+[dev-dependencies]
+criterion = "0.3.1"
+
+[[bench]]
+name = "foo"
+harness = false
