--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ keywords = ["life", "conway", "cellular", "automaton", "hashlife"]
 categories = ["algorithms", "science", "simulation"]
 license = "MPL-2.0"
 edition = "2018"
+publish = false
 
 [dependencies]
 slotmap = "0.4.0"
