--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,17 +1,14 @@
 [package]
 name = "smeagol"
-version = "0.5.0"
+version = "1.0.0"
 authors = ["Billy Rieger <wrieger@protonmail.com>"]
-description = "Conway's Game of Life using HashLife and SIMD."
+description = "TODO"
 repository = "https://github.com/billyrieger/smeagol"
 readme = "README.md"
-keywords = ["life", "conway", "cellular", "automaton", "hashlife"]
-categories = ["algorithms", "science", "simulation"]
 license = "MPL-2.0"
 edition = "2018"
 publish = false
 
 [dependencies]
-slotmap = "0.4.0"
 thiserror = "1.0.16"
 either = "1.5.3"
