--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,40 +7,28 @@ on:
     branches: [master]
 
 jobs:
-  test:
-    name: Run tests
+  ci:
+    name: Continuous integration
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v2
 
-    - name: Install stable toolchain
+    - name: Install nightly Rust toolchain
       uses: actions-rs/toolchain@v1
       with:
         profile: minimal
-        toolchain: stable
+        toolchain: nightly
+        components: rustfmt
         override: true
+    
+    - name: Check formatting
+      uses: actions-rs/cargo@v1
+      with:
+        command: fmt
+        args: -- --check
 
     - name: Run tests
       uses: actions-rs/cargo@v1
       with:
         command: test
-
-  style:
-    name: Check style
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-        
-      - name: Install nightly toolchain
-        uses: actions-rs/toolchain@v1
-        with:
-          profile: minimal
-          # use nightly rustfmt for unstable options
-          toolchain: nightly
-          override: true
-          components: rustfmt
-      - uses: actions-rs/cargo@v1
-        with:
-          command: fmt
-          args: -- --check
