--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ publish = false
 
 [dependencies]
 either = "1.5"
+itertools = "0.9"
 pest = "2.1"
 pest_derive = "2.1"
 thiserror = "1.0"
-typed-generational-arena = "0.2"
