--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,8 @@ edition = "2018"
 publish = false
 
 [dependencies]
-either = "1.5"
-itertools = "0.9"
-nom = "5.1"
-thiserror = "1.0"
+either = "1.5.3"
+itertools = "0.9.0"
+nom = "5.1.1"
+thiserror = "1.0.19"
+typed-generational-arena = "0.2.5"
