--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,8 @@ license = "MPL-2.0"
 edition = "2018"
 publish = false
 
+[features]
+simd = ["packed_simd"]
+
 [dependencies]
+packed_simd = { version = "0.3.3", optional = true }
