--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,8 @@ edition = "2021"
 publish = false
 
 [dependencies]
+derive_more = "0.99.17"
+fnv = "1.0.7"
 indexmap = "1.8.0"
 
 [dev-dependencies]
